--- a/glossary.html
+++ b/glossary.html
@@ -81,7 +81,8 @@
 <p id="mammoth"><b>Mammoth</b>: any large, <a href="img/mammoth1.jpg"> elephantlike mammal</a> of the extinct genus Mammuthus, from the Pleistocene Epoch, having hairy skin and ridged molar teeth.</p>
 <p id="mastodon"><b> Mastodon</b>: a massive, <a href="img/mastodon1.jpg"> elephantlike mammal</a> of the genus Mammut (Mastodon), that flourished worldwide from the Miocene through the Pleistocene epochs and, in North America, into recent times, having long, curved upper tusks and, in the male, short lower tusks.</p>
 <p><b>Material remains</b>: artifacts, features and other items such as plant and animal remains that indicate human activity.</p>
-<p id="midden"><b>Midden</b>: an area used for trash disposal.</p>
+	<p id="metallurgic"><b>Metallurgic</b>:the technique or science of working or heating metals so as to give them certain desired shapes or properties.</p>
+	<p id="midden"><b>Midden</b>: an area used for trash disposal.</p>
 <p id="middlearchaic"><b>Middle Archaic</b>: this archaeological classification is used for those people who lived here from about 8,000 to 5,000 years ago.  This was a time of changing climatic conditions in which the area may have become significantly drier and warmer than it is today.</p>	
 <p id="middlewoodland"><b>Middle Woodland</b>:in the classification of archaeological cultures, the Middle Woodland period spanned a period from roughly 200 BC to AD 500.</p> 
 <p id="ossuary"><b>Ossuary</b>: built structure to hold a number of burials. Archaeologically, the structure seldom remains.</p>
@@ -93,7 +94,8 @@
 <p><b>Prehistoric</b>: the period of time before written records; the absolute date for the prehistoric period varies from place to place.</p>
 <p><b>Projectile point</b>: a general term for stone points that were hafted to darts, spears or arrows; often erroneously called "arrowheads".</p>
 <p id="carbon"><b>Radiocarbon dating</b>: a method for determining the age of an object containing organic material by using the properties of radiocarbon (C14), a radioactive isotope of carbon.</p>
-<p><b>Rock art</b>: a general term for pecked, incised, or painted figures on rock.</p>
+	<p id="radiographic"><b>Radiographic</b>:radiographic testing makes use of x-rays to view the internal structure of a non-transparent object of varying density and composition. </p>
+	<p><b>Rock art</b>: a general term for pecked, incised, or painted figures on rock.</p>
 <p id="sherd"><b>Sherd</b>: a broken fragment of pottery.</p>
 <p><b>Site</b>: a place where human activity occurred and material remains were deposited.</p>
 <p><b>Site steward</b>:  a volunteer who visits a site and helps protect it form vandalism and looting.</p>
