--- a/references.html
+++ b/references.html
@@ -46,7 +46,8 @@
 <p> Fairchild, Jerry. 1977. <i> The Schmidt Site: A Pre-Nipissing Village in the Saginaw Valley, Michigan.</i> Master's Thesis. Department of Anthropology, Western Michigan University.</p>
 <p> Harrison, Sidney. 1966. The Schmidt Site (20 SA 192), Saginaw County, Michigan. <i> The Michigan Archaeologist</i> 12(2):49-70.</p>
 	<p> Kozlowski, Kim. 2016. <i> Mastodon bones discovered in Michigan's thumb region. </i> <a href="Mastodon.pdf"> Detroit News.</a> </p>
-<p> Luedtke, Barbara. 1976. <i> Lithic Material Distributions and Interaction Patterns During the Late Woodland Period in Michigan.</i> PhD Dissertation, Department of Anthropology, University of Michigan, Ann Arbor. </p> 
+<p> Lovis, William. 1971. The Holtz Site (20AN26), Antrim Co., Michigan, A Preliminary Report. <i> The Michigan Archaeologist</i> 17(2):49-64.</p>
+	<p> Luedtke, Barbara. 1976. <i> Lithic Material Distributions and Interaction Patterns During the Late Woodland Period in Michigan.</i> PhD Dissertation, Department of Anthropology, University of Michigan, Ann Arbor. </p> 
 <p> Quimby, George I. 1966. <i> The Dumaw Creek Site: a Seventeenth Century Prehistoric Indian Village and Cemetery in Oceana County, Michigan.</i>Fieldiana: Anthropology 56(1). Field Museum of Natural History.</p>
 		<p> Shott, Michael J. 1993. <i>The Leavitt Site: A Parkhill Phase Paleo-Indian Occupation in Central Michigan.</i> Memoirs, Museum of Anthropology, University of Michigan, No. 25.</p>
 	<p> Shott, Michael J. and Henry T. Wright. 1999. The Paleo-Indians: Michigan's First People. In <i> Retrieving Michigan's Buried Past: The Archaeology of the Great Lakes State.</i> Pp. 59-70. Edited by John R. Halsey. Cranbrook Institute of Science, Bulletin 64.</p> 
