--- a/references.html
+++ b/references.html
@@ -48,7 +48,8 @@
 	<p> Kozlowski, Kim. 2016. <i> Mastodon bones discovered in Michigan's thumb region. </i> <a href="Mastodon.pdf"> Detroit News.</a> </p>
 <p> Lovis, William. 1971. The Holtz Site (20AN26), Antrim Co., Michigan, A Preliminary Report. <i> The Michigan Archaeologist</i> 17(2):49-64.</p>
 	<p> Luedtke, Barbara. 1976. <i> Lithic Material Distributions and Interaction Patterns During the Late Woodland Period in Michigan.</i> PhD Dissertation, Department of Anthropology, University of Michigan, Ann Arbor. </p> 
-<p> Quimby, George I. 1966. <i> The Dumaw Creek Site: a Seventeenth Century Prehistoric Indian Village and Cemetery in Oceana County, Michigan.</i>Fieldiana: Anthropology 56(1). Field Museum of Natural History.</p>
+<p> Martin, Susan. 1985. <i> Models of Change in the Woodland Settlement of the Northern Great Lakes Region.</i> PhD dissertation, Department of Anthropology, Michigan State University.</p>
+	<p> Quimby, George I. 1966. <i> The Dumaw Creek Site: a Seventeenth Century Prehistoric Indian Village and Cemetery in Oceana County, Michigan.</i>Fieldiana: Anthropology 56(1). Field Museum of Natural History.</p>
 	<p> Richner, Jeffrey. 1991. <i> Archeological Excavations at the Platte River Campground Site (20BZ16), Sleeping Bear Dunes National Lakeshore, 1987.	</i> Midwest Archeological Center Technical Report No. 10. National Park Service.</p>
 	<p> Shott, Michael J. 1993. <i>The Leavitt Site: A Parkhill Phase Paleo-Indian Occupation in Central Michigan.</i> Memoirs, Museum of Anthropology, University of Michigan, No. 25.</p>
 	<p> Shott, Michael J. and Henry T. Wright. 1999. The Paleo-Indians: Michigan's First People. In <i> Retrieving Michigan's Buried Past: The Archaeology of the Great Lakes State.</i> Pp. 59-70. Edited by John R. Halsey. Cranbrook Institute of Science, Bulletin 64.</p> 
