--- a/references.html
+++ b/references.html
@@ -47,6 +47,7 @@
 <p> Harrison, Sidney. 1966. The Schmidt Site (20 SA 192), Saginaw County, Michigan. <i> The Michigan Archaeologist</i> 12(2):49-70.</p>
 	<p> Kozlowski, Kim. 2016. <i> Mastodon bones discovered in Michigan's thumb region. </i> <a href="Mastodon.pdf"> Detroit News.</a> </p>
 <p> Lovis, William. 1971. The Holtz Site (20AN26), Antrim Co., Michigan, A Preliminary Report. <i> The Michigan Archaeologist</i> 17(2):49-64.</p>
+	<p> Lovis, William A., Alan F. Arbogast and G. William Monaghan. 2012. <i> The Geoarchaeology of Lake Michigan Coastal Dunes.</i>  Environmental Research Series No. 2.  Michigan Department of Transportation, Michigan State University Press, East Lansing.</p>  
 	<p> Luedtke, Barbara. 1976. <i> Lithic Material Distributions and Interaction Patterns During the Late Woodland Period in Michigan.</i> PhD Dissertation, Department of Anthropology, University of Michigan, Ann Arbor. </p> 
 <p> Martin, Susan. 1985. <i> Models of Change in the Woodland Settlement of the Northern Great Lakes Region.</i> PhD dissertation, Department of Anthropology, Michigan State University.</p>
 	<p> Quimby, George I. 1966. <i> The Dumaw Creek Site: a Seventeenth Century Prehistoric Indian Village and Cemetery in Oceana County, Michigan.</i>Fieldiana: Anthropology 56(1). Field Museum of Natural History.</p>
