--- a/references.html
+++ b/references.html
@@ -45,6 +45,7 @@
 <p> Erickson, Jim.  2016. <i> U-M-led team recovers 'most complete mastodon skeleton in many decades' from Thumb site. </i> Michigan News, University of Michigan. A pdf version of the article is available <a href="mastodon2.pdf"> here </a>.</p>
 <p> Fairchild, Jerry. 1977. <i> The Schmidt Site: A Pre-Nipissing Village in the Saginaw Valley, Michigan.</i> Master's Thesis. Department of Anthropology, Western Michigan University.</p>
 <p> Harrison, Sidney. 1966. The Schmidt Site (20 SA 192), Saginaw County, Michigan. <i> The Michigan Archaeologist</i> 12(2):49-70.</p>
+	<p> Janzen, Donald. 1968. <i> The Naomikong Point Site and the Dimentions of Laurel in the Lake Superior Region.</i> Museum of Anthropology, University of Michigan Anthropological Papers, No. 36.</p>
 	<p> Kozlowski, Kim. 2016. <i> Mastodon bones discovered in Michigan's thumb region. </i> <a href="Mastodon.pdf"> Detroit News.</a> </p>
 <p> Lovis, William. 1971. The Holtz Site (20AN26), Antrim Co., Michigan, A Preliminary Report. <i> The Michigan Archaeologist</i> 17(2):49-64.</p>
 	<p> Lovis, William A., Alan F. Arbogast and G. William Monaghan. 2012. <i> The Geoarchaeology of Lake Michigan Coastal Dunes.</i>  Environmental Research Series No. 2.  Michigan Department of Transportation, Michigan State University Press, East Lansing.</p>  
