--- a/references.html
+++ b/references.html
@@ -42,7 +42,8 @@
 <h1>References Used For Creating This Timeline</h1>
 </div>
 	<h2> Books and Articles </h2>
-<p> Erickson, Jim.  2016. <i> U-M-led team recovers 'most complete mastodon skeleton in many decades' from Thumb site. </i> Michigan News, University of Michigan. A pdf version of the article is available <a href="mastodon2.pdf"> here </a>.</p>
+<p>Bianchi, Thomas H. 1974. <i>Description and Analysis of the Prehistoric Ceramic Materials Recovered on the Winter Site.</i>. Western Michigan University.</p>
+	<p> Erickson, Jim.  2016. <i> U-M-led team recovers 'most complete mastodon skeleton in many decades' from Thumb site. </i> Michigan News, University of Michigan. A pdf version of the article is available <a href="mastodon2.pdf"> here </a>.</p>
 <p> Fairchild, Jerry. 1977. <i> The Schmidt Site: A Pre-Nipissing Village in the Saginaw Valley, Michigan.</i> Master's Thesis. Department of Anthropology, Western Michigan University.</p>
 <p> Harrison, Sidney. 1966. The Schmidt Site (20 SA 192), Saginaw County, Michigan. <i> The Michigan Archaeologist</i> 12(2):49-70.</p>
 	<p> Janzen, Donald. 1968. <i> The Naomikong Point Site and the Dimentions of Laurel in the Lake Superior Region.</i> Museum of Anthropology, University of Michigan Anthropological Papers, No. 36.</p>
