--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
 <body>
 
 <div class='header'>
-	<h1><center>TIME-MARCH: Timeline of Michigan Archaeology</center></h1>
+	<h1><center>Timeline of Michigan Archaeology</center></h1>
 </div>
 
-<p class='intro'>Greetings! This is version 1.5 of the timeline. If you are viewing this timeline now, please be aware that the information contained in it is NOT the final version and it may still contain errors, formatting issues, or broken links.</p>
+<p class='intro'>Welcome to the Beta version of the Timeline of Michigan Archaeology! While most of the text is in its final form, there are still some image formatting issues that are being worked out. Don't let that stop you from looking around, and enjoying the content so far!</p>
+<p> To use the timeline, you can navigate by clicking on "previous" or "next" at the bottom of the timeline (by the date). You can click on individual events for more information.</p>
 
 </div>
 
