constrain to data: true

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 				"image_lane_height":100,
 				"icon_folder":"timeglider/icons/",
 				"data_source":"json/js_history.json",
-				"constrain_to_data": false
+				"constrain_to_data": true
 		});
 		
 		
