--- a/more_info.html
+++ b/more_info.html
@@ -65,8 +65,8 @@ height:120px;
 
 
 <p> Halsey, John, editor.  1999. <i> Retrieving Michigan's Buried Past: The Archaeology of the Great Lakes State.</i> Cranbrook Institute of Science, Bulletin 64. </p>
-	<p> Fitting, James. 1975. <i>The Archaeology of Michigan: A guide to the prehistory of the Great Lakes region.</i>Cranbrook Institute of Science; 2nd edition.</p>./p>
-	<p> Michigan Archaeological Society <a href="http://www.miarch.org/">webpage</a> </p>
+<p> Fitting, James. 1975. <i>The Archaeology of Michigan: A guide to the prehistory of the Great Lakes region.</i>Cranbrook Institute of Science; 2nd edition.</p>
+<p> Michigan Archaeological Society <a href="http://www.miarch.org/">webpage</a> </p>
 
 
 </body>
