--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 	<h1><center>Timeline of Michigan Archaeology</center></h1>
 </div>
 
-<p class='intro'>Welcome to the Beta version of the Timeline of Michigan Archaeology! While most of the text is in its final form, there are still some image formatting issues that are being worked out. Don't let that stop you from looking around, and enjoying the content so far!</p>
-<p> To use the timeline, you can navigate by clicking on "previous" or "next" at the bottom of the timeline (by the date). You can click on individual events for more information.</p>
+<p class='intro'>Welcome the Timeline of Michigan Archaeology!</p>
+<p> To use the timeline, navigate by clicking on "previous" or "next" at the bottom of the timeline (by the date). You can click on individual events for more information.</p>
 
 </div>
 
