--- a/more_info.html
+++ b/more_info.html
@@ -58,13 +58,13 @@ height:120px;
 
 <div class='tg-sample-header'>
 
-<h1>To learn more about Michigan archaeology, </h1>
-	<h2>Check out some of these sources.</h2>
-
+<h2>For more information on Michigan archaeology: </h2>
+	
 </div>
 
 
 <p> Halsey, John, editor.  1999. <i> Retrieving Michigan's Buried Past: The Archaeology of the Great Lakes State.</i> Cranbrook Institute of Science, Bulletin 64. </p>
+<p> Halsey, John, and Wayne Lusardi, editors. 2008. <i> Beneath the Inland Seas: Michigan's Underwater Archaeological Heritage.</i>. Michigan Department of History, Arts, and Libraries, Lansing, Michigan.</p>
 <p> Fitting, James. 1975. <i>The Archaeology of Michigan: A guide to the prehistory of the Great Lakes region.</i>Cranbrook Institute of Science; 2nd edition.</p>
 <p> Michigan Archaeological Society <a href="http://www.miarch.org/">webpage</a> </p>
 
