--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<h1><center>Timeline of Michigan Archaeology</center></h1>
 </div>
 
-<p class='intro'>Welcome the Timeline of Michigan Archaeology!</p>
+<p class='intro'>Welcome to the Timeline of Michigan Archaeology!</p>
 <p> To use the timeline, navigate by clicking on "previous" or "next" at the bottom of the timeline (by the date). You can click on individual events for more information.</p>
 
 </div>
